fix z-index

--- a/src/EstimatorX.Client/Styles/_estimate.scss
+++ b/src/EstimatorX.Client/Styles/_estimate.scss
@@ -16,7 +16,7 @@
     > .accordion-header {
       position: sticky;
       top: 3.7rem;
-      z-index: 1040;
+      z-index: 1020;
     }
   }
 }
